# flyer_to_site

./: .gitignore  flyer_to_text_script.py  manage.py  pyproject.toml
flyer_to_gmaps/: django_request_processor.py  helpers.py  settings.py  urls.py  views.py  wsgi.py
flyer_to_gmaps/templates/: index.html
